main.css
h3 {
	font-family: "Lato", sans-serif;
	font-weight: 200;
	font-size: 24px;
	color: #5c97bf;
	margin-top: 5em;
	margin-bottom: 1em;
}

.item{
	width:500px;
	padding: 5em;
}

.item2{
	width:1000px;
	padding: 5em;
}

.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
}

/* Create four equal columns that sits next to each other */
.column {
  flex: 33%;
  max-width: 33%;
  padding: 0 4px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}



h4 {
	font-family: "Lato", sans-serif;
	font-size: 18px;
	margin-top:2em;
}
h5,
h6 {
	font-family: "Lato", sans-serif;
}

body,
html {
	height: 100%;
	color: #777;
	line-height: 1.8;
}

a,
p {
	font-size: 18px;
	margin-top: 0;
	font-family: 'Open Sans', sans-serif;
	text-decoration: none
}

.note {
	font-size:16px;
	font-style: italic
}

.button1 {
	background-color: white;
	border: 2px solid #75b0d9;
	color: #75b0d9;
	padding: 7px 20px;
	text-align: center;
	text-decoration: none;
	transition-duration: 0.4s;
	display: inline-block;
	font-size: 16px;

}

.button1:hover {
	background-color: #98cff5;
	/* Green */
	color: white;
}

.button2 {
	background-color: #5c97bf;
	border: 2px solid #5c97bf;
	margin-right: 1em;

	color: white;
	padding: 7px 20px;
	text-align: center;
	text-decoration: none;
	transition-duration: 0.4s;
	display: inline-block;
	font-size: 16px;
}

.text-highlight {
	font-weight: 600;
	transition-duration: 0.4s;
	color: #5c97bf
}

.text-highlight:hover {
	color: #3f6c8a
}

.button2:hover {
	border: 2px solid #3f6c8a;
	background-color: #3f6c8a;
	/* Green */
	color: white;
}

.text {
	margin: 0 auto;
	font-family: 'Open Sans', sans-serif;
	font-size: 18px;
}

.text2 {
	width: 50vw;
	margin: 0 auto;
	font-family: 'Open Sans', sans-serif;
	font-size: 18px;
}

.text-colored {
	font-size: 14px;
	transition-duration: 0.4s;
	color: #5c97bf
}

.text-colored:hover {
	color: #3f6c8a
}
.text-highlight-no-hover {
	font-weight: 600;
	font-family: 'Open Sans', sans-serif;
	color: #5c97bf
}

.hover-text {
	text-decoration: none;
	transition: 0.2s;
	font-size: 18px;
	font-family: 'Open Sans', sans-serif;
}

.hover-text: hover {
	color: #5c97bf;
}

.project-image {
	border-radius: 20px;
	text-align: right;
	margin: 2em;
	transition-duration: 0.2s;
}

.project-text {

}

.project-text-inner {

}

.column1 {
  float: left;
  text-align: right;
padding-right:2em;
  width: 50%;
}

.column2 {
  float: left;
	padding-left:2em;
  width: 45%;
}

.column3 {
  float: left;
  text-align: right;
padding-right:2em;
  width: 30%;
}

.column4 {
  float: left;
	padding-left:2em;
  width: 70%;
}


/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
	margin-bottom:3em;
}

#vertical-center {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

.span-text {
	white-space: nowrap;
	text-align: center;
	font-family: "Open Sans", sans-serif;
}

#span-text-inner {
	font-size: 10px !important;
}

.title{
  font-family: 'Montserrat', sans-serif;
	font-size:24px;
	color:darkslategray;
}

.title2{
    /*font-family: 'ZCOOL QingKe HuangYou', cursive;*/
		font-size:22px;
	color:darkslategray;
}

.navbar-item {
	text-decoration: none;
	transition: 0.2s;
	font-size: 18px;
	font-family: 'Open Sans', sans-serif;
	color: darkslategray;
}

.menu-button {
	text-decoration: none;
	transition: 0.2s;
	font-size: 18px;
	font-family: 'Open Sans', sans-serif;
	color: darkslategray;
}

.menu-button:hover {
	color: #5c97bf
}

.footer-button {
	text-decoration: none;
	transition: 0.2s;
	font-size: 24px;
	margin: 10px;
	font-family: 'Open Sans', sans-serif;
	color: darkslategray;
}

.footer-button:hover {
	color: #5c97bf
}

.contact-button {
	text-decoration: none;
	transition: 0.2s;
	font-size: 24px;
	font-family: 'Open Sans', sans-serif;
	color: darkslategray;
}

.contact-button:hover {
	color: #5c97bf
}

.navbar-item:hover {
	color: #5c97bf
}

.icon {
	color:darkslategray;
	transition: .2s;
	margin: 15px;
	text-decoration: none;
	font-size: 20px;
}

.icon:hover {
	color: darkslategray;
}


.grid-element {
	width: 100%;
	transition-duration: 0.2s;
}

.about {
	margin: auto;
	width: 50%;
	padding: 10px;
}

/* Create a Parallax Effect

.bgimg-1,
.bgimg-2,
.bgimg-3,
.bgimg-4,
.bgimg-6 {
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.bgimg-5 {
	background-attachment: fixed;
	background-position: center;
	background-repeat: no-repeat;
	background-size: 40%;
}
*/
/* First image (Logo. Full height) */

.container {
	/* background-image: url('Assets/nanjing_.jpg'); */
	display:flex;
	align-items: flex-start;
	padding-top: 5em;
	min-height: 100%;
}

/* Second image (Portfolio) */

.bgimg-2 {
	background-image: url("Assets/nanjing_1.jpg");
	min-height: 400px;
}

/* Third image (Contact) */

.bgimg-3 {
	background-image: url("/Assets/hang_glider.jpg");
	min-height: 400px;
}

.bgimg-4 {
	background-image: url("/Assets/sandiego.jpg");
	min-height: 400px;
}

.bgimg-5 {
	background-image: url("/Assets/angicart.png");
	min-height: 400px;
}

.bgimg-6 {
	background-image: url("/Assets/balloon.jpg");
	min-height: 400px;
}

.w3-wide {
	letter-spacing: 2px;
}

.w3-hover-opacity {
	cursor: pointer;
}

/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 800px) {
  .column {
    flex: 50%;
    max-width: 50%;
  }

}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .column {
    flex: 100%;
    max-width: 100%;
  }

	.container {
     display: inline-block;
     position: relative;
   }

	 .item{
		 width:500px;
	 }

	 .item2{
		 width:500px;
		 padding:1em;
	 }


	/*h3 {
		font-size: 20px;
	}
	h5,h6,p,a {
		font-size: 14px;
	}*/

	.text2 {
		width: 90vw;
		font-size:14px;
	}
	.navbar-item {
		display: none !important;
	}
	.content {
		margin: 20px;
	}

	.note {
		font-size: 14px;
	}

	.grid-element {
		margin-top: 10px !important;
	}

	.button2 {
		font-size:14px;
	}

	.button1 {
		margin-top:1em !important;
		font-size:14px;
	}

	.video{
		height: 300px;
	}

	#span-text-inner {
		font-size: 24px !important;
	}

	.project-text {
		margin: 0 !important;
		padding: 0 !important;
	}

	.column1 {
		width: 100%;
		text-align: center;
		padding: 0;
	  }


	.column2 {
		width:100%;
		padding: 0;

	}
	.column3 {
		width: 100%;
		text-align: center;
		padding: 0;
		}


	.column4 {
		width:100%;
		padding: 0;

	}

}

